# pq-sovereign-storage

./: .env.example  .gitignore  .vercelignore  Cargo.toml  README.md  demo.sh  index.html  vercel.json
contracts/: .gitignore  foundry.toml
contracts/lib/forge-std/src/: Script.sol  Vm.sol
contracts/script/: DeployPqspVerifier.s.sol
contracts/src/: PqspVerifier.sol
core/: Cargo.toml
core/src/: lib.rs  types.rs  verifier.rs
crypto/: Cargo.toml
crypto/src/: commitment.rs  encryption.rs  lib.rs  zk.rs
src/: main.rs
storage_client/: Cargo.toml
storage_client/src/: client.rs  error.rs  lib.rs  payload.rs
