[workspace]
members = ["core", "crypto", "storage_client"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
async-trait = "0.1"
bytes = { version = "1", features = ["serde"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
ethers = { version = "2.0.14", features = ["rustls"] }
hex = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zeroize = "1.8"
zg-storage-client = { git = "https://github.com/0gfoundation/0g-storage-sdk-rust", package = "zg-storage-client", rev = "660268e4db07f356d9d3169989d53a1f0d062308" }

[package]
name = "pq-sovereign-storage"
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true
description = "Post-Quantum Sovereign Privacy Storage workspace bootstrap."

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
dotenv = "0.15.0"
indicatif = "0.18.4"
pqsp-core = { path = "core" }
pqsp-crypto = { path = "crypto" }
pqsp-storage-client = { path = "storage_client" }
rand_core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
