[package]
name = "pqsp-crypto"
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true
description = "Cryptographic primitives for PQ sovereign privacy storage."

[dependencies]
bytes.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
rand_core.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
zeroize.workspace = true
