[package]
name = "pqsp-storage-client"
edition.workspace = true
license.workspace = true
publish = false
version.workspace = true
description = "0G Storage client adapter and upload pipeline."

[dependencies]
async-trait.workspace = true
bytes.workspace = true
ethers.workspace = true
hex.workspace = true
pqsp-core = { path = "../core" }
pqsp-crypto = { path = "../crypto" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
zg-storage-client.workspace = true
